# metalpy

./: .gitignore  .gitmodules  LICENSE.txt  MANIFEST.in  README.md  README.zh_CN.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
META/mepa/: dask_executor.py  dask_helper.py  executor.py  process_executor.py  task_allocator.py  worker.py
META/scab/: injectors.py  lazy_class_delegate.py  parallelized.py  progressed.py  readme.md  readme.zh_CN.md
META/scab/modelling/shapes/: cuboid.py  obj.py  prism.py  shape3d.py  tunnel.py
META/utils/: file.py  geometry.py  hash.py  misc.py  sensor_array.py
buildtools/: build.py  pavement.py
buildtools/META/: setuptools_backend.py
docs/changelog/: 0.0.5-changelog.md  0.1.0-changelog.md  0.1.1-changelog.md  0.2.0-changelog.md
docs/release/: 0.0.5-notes.md  0.1.0-notes.md  0.1.1-notes.md  0.2.0-notes.md
examples/aerial_survey/: main_aerial_survey.py
examples/carto/: main_carto.py
examples/demag/: main_demag.py
examples/ear_cutting/: main_ear_cutting.py
examples/executor/: main_executor.py
examples/export_vtk/: main_export_vtk.py
examples/export_vtk/stl_models/: mine.stl
examples/forward/: main_forward.py
examples/logo/: main_logo.py
examples/modelled_mesh_io/: tensor_mesh_io.py
examples/simulation_builder/: main_simulation_builder.py  main_simulation_builder_compare.py
examples/taichi/: main_taichi.py
examples/topo/: main_topo.py
examples/tree_mesh/: main_tree_mesh.py  main_tree_mesh_multi_models.py
metalpy/: __init__.py  _version.py  version.py
metalpy/aero/routes/: __init__.py
metalpy/aero/routes/aerial_survey/: __init__.py  (+4 more)
metalpy/aero/utils/: exif.py  line_analysis.py
metalpy/carto/: README.md  README.zh_CN.md
metalpy/carto/basemap/: __init__.py  constants.py  gdal_helper.py  geo_image.py  geo_image_ref_system.py  map_downloader.py
metalpy/carto/coords/: __init__.py  chs_coords.py  coordinates.py
metalpy/carto/pyvista/: crs.py
metalpy/carto/utils/: crs.py  mpl.py  pyvista_turtle.py
metalpy/mepa/: README.md  __init__.py  dask_executor.py  dask_helper.py  executor.py  lazy_evaluator.py  linear_executor.py  parallel_progress.py  pool_executor.py  process_executor.py  queue_like_worker_context.py  shared_array.py  sub_executor.py  task_allocator.py  thread_executor.py  utils.py  worker.py  worker_context.py
metalpy/mepa/tests/: test_allocator.py
metalpy/mexin/: README.md  README.zh_CN.md  __init__.py  injectors.py  lazy_class_delegate.py  mixed.py  mixin.py  mixins.py  patch.py  patch_context.py  sentinal.py  tagged_method.py
metalpy/mexin/injectors/: __init__.py  after.py  before.py  extends.py  function_context.py  property_replacement.py  recoverable_injector.py  replacement.py  replaces.py  utils.py
metalpy/mexin/utils/: __init__.py  misc.py  type_map.py
metalpy/scab/: README.md  README.zh_CN.md  __init__.py  gpu_accelarated.py  injectors.py  parallelized.py  progressed.py  readme.md  readme.zh_CN.md  simpeg_patch_context.py  torched.py
metalpy/scab/builder/: __init__.py  simulation.py  simulation_builder.py  utils.py
metalpy/scab/demag/: __init__.py  demaged.py  demaged_mixin.py  demagnetization.py  factored_demagnetization.py  utils.py
metalpy/scab/distributed/: __init__.py  base.py  distributed.py  distributed_simulation.py  utils.py
metalpy/scab/fixed/: __init__.py  fixed.py
metalpy/scab/formatted/: __init__.py  formatted.py  formatter_mixin.py
metalpy/scab/modelling/: __init__.py  bounded.py  layer.py  mix_modes.py  modelled_mesh.py  object.py  scene.py  tree_mesh_builder.py
metalpy/scab/progressed/: __init__.py  progressed.py
metalpy/scab/solvers/: __init__.py  amg_solver.py  tied_sparse_solver.py
metalpy/scab/tests/: test_dispatchers.py  test_magnetics_simulation.py
metalpy/scab/tied/: __init__.py  taichi_kernel_base.py  tied.py  value_observer.py
metalpy/scab/utils/: format.py  hash.py  misc.py  patch.py  proj.py  sparse.py
metalpy/utils/: abcd.py  algos.py  arg_specs.py  batch.py  bounds.py  dhash.py  ear_clip.py  file.py  geometry.py  hash.py  math.py  matplotlib.py  misc.py  model.py  numeric.py  numpy.py  obj_splitter.py  object_path.py  pandas.py  path.py  rand.py  regex_pattern.py  sensor_array.py  string.py  taichi.py  taichi_kernels.py  taichi_lazy.py  time.py  type.py
metalpy/utils/algos/: __init__.py  connected_triangle_surface.py  min_area_rect.py  quick_union.py
metalpy/utils/array_ops/: __init__.py  array_ops.py  concat.py  get_column.py  get_columns_except.py  get_row.py  is_array_like.py  ustack.py
metalpy/utils/collections/: __init__.py  ordered_set.py
metalpy/utils/ioc/: __init__.py  container.py  ordered_typeset.py  service.py
metalpy/utils/polygon/: __init__.py  ear_clip.py  edge.py  re_intersect.py
metalpy/utils/pv_datasets/: __init__.py  dataset_wrapper.py  texture_readers.py  textured_dataset.py  universal_dataset.py
metalpy/utils/pyvista_dataset_wrappers/: dataset_wrapper.py  texture_readers.py  textured_dataset.py  universal_dataset.py
metalpy/utils/tests/: test_bounds.py  test_ear_clip.py  test_object_path.py  test_regex_pattern.py  test_sensor_array.py  test_taichi.py
metalpy/utils/ti_lazy/: wrappers.py
metalpy/utils/ti_solvers/: solver_progress.py
misc/: start_cluster.bat  start_workers_only.bat  startup.py
(+125 files in other folders)
