[build-system]
requires = ["setuptools>=63.0"]
build-backend = "metalpy.setuptools_backend"
backend-path = ["buildtools"]

[project]
name = "metalpy"
version = "0.0.3"
authors = [
    { name="yanang007", email="yanang007@gmail.com" },
]
description = "Essential tools and libraries for SimPEG and related workflows."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "distributed",
    "tqdm",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "psutil",
    "pympler",
    "cloudpickle",
    "properties",
    "colour",
]

[project.optional-dependencies]
tests = ["pytest"]
docs = ["sphinx"]
scab = [
    "SimPEG >= 0.18",
    "discretize",
    "taichi >= 1.3.0",
]
complete = [
    "metalpy[scab, tests, docs]",
]
dev = [
    "metalpy[complete]",
]

[tool.setuptools.packages.find]
include = ["metalpy*", "buildtools*"]
